--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -21,6 +21,7 @@ jobs:
       - run: npm run build --if-present
       - run: npm test
       - name: Deploy to Heroku
+        if: github.event_name == 'push'
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           args: deploy --dir=build --prod
