--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "graphql": "^16.5.0",
+    "immer": "^9.0.15",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "sass": "^1.52.2",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
