--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "noImplicitReturns": true
+    "noImplicitReturns": true,
+    "noEmitOnError": true
   }
 }
